# aibot

./: .gitignore  README.md
config/Sphinx/: aibot.dic  aibot.lm
config/rebecca/aiml/annotated_aibot/: Atomic.aiml  Bot.aiml  Client.aiml  Default.aiml  Emotion.aiml  Humor.aiml  Interjection.aiml  Pickup.aiml  Reducer.aiml  Reductions.aiml  Salutations.aiml  That.aiml
config/rebecca/aiml/annotated_aibot_reduced/: Adverbs.aiml
config/rebecca/conf/: properties.xml
config/rebecca/resources/pictures/: README.txt
ext/AiBotTCPClient/: main.cpp
ext/AiBotTCPServer/: main.cpp
ext/Arduino_SerialCom/: Arduino_SerialCom.ino
ext/OpenCVFaceRecognition/: Main.cpp  OpenCVFaceRecognition.sln  OpenCVFaceRecognition.vcxproj
ext/OpenCVHandRecognition/: Main.cpp  OpenCVHandRecognition.sln  OpenCVHandRecognition.vcxproj
ext/RebeccaAIML-src-9871/: Authors.txt  INSTALL.txt  README.txt  rebecca.spec
ext/RebeccaAIML-src-9871/aiml/annotated_alice/: Dialog.aiml
ext/RebeccaAIML-src-9871/build_files/: README.txt
ext/RebeccaAIML-src-9871/build_files/autoconf/: README  bootstrap.sh  configure
ext/RebeccaAIML-src-9871/build_files/autoconf/console/: Makefile.am  configure.in
ext/RebeccaAIML-src-9871/build_files/autoconf/console/scripts/: Makefile.in
ext/RebeccaAIML-src-9871/build_files/autoconf/consoleHtmlConverter_tag_layer/: Makefile.am  config.h.in  configure
ext/RebeccaAIML-src-9871/build_files/autoconf/lib/: Makefile.am  config.h.in  configure  configure.in
ext/RebeccaAIML-src-9871/build_files/autoconf/qtgui/: Makefile.am  configure.in
ext/RebeccaAIML-src-9871/build_files/autoconf/regression/: Makefile.am  Makefile.in  configure  configure.in
ext/RebeccaAIML-src-9871/build_files/autoconf/scripts/: Makefile.in  consoleAIMLHtmlConverter.in  qtgui.in  regression.in
ext/RebeccaAIML-src-9871/build_files/gnumake/: Makefile  config.mk  sourceFiles.mk
ext/RebeccaAIML-src-9871/build_files/vs7_build_bin_dist/: build_dist.bat  copy_common_files.bat  environment_variables.cmd  excluded_files.txt
ext/RebeccaAIML-src-9871/build_files/vs7_dll/: rebecca.sln
ext/RebeccaAIML-src-9871/build_files/vs7_dll_all/: UpgradeLog.htm  rebecca.sln
ext/RebeccaAIML-src-9871/build_files/vs7_tests/graphbuilding/: graphbuilding.vcproj  graphbuilding.vcxproj.filters
ext/RebeccaAIML-src-9871/build_files/vs7_tests/regression/: regression.vcproj  regression.vcxproj  regression.vcxproj.filters
ext/RebeccaAIML-src-9871/doc/: windowsINSTALL.txt
ext/RebeccaAIML-src-9871/doc/api+framework+samples/html/: _a_i_m_l_engine_8h-source.html  _a_i_m_l_engine_thread_8h-source.html  _call_backs_8h-source.html  _condition_8h-source.html  _custom_tags_impl_8h-source.html  _custom_text_edit_8h-source.html  _custom_topic_8h-source.html  _formal_8h-source.html  _gender_8h-source.html  _get_8h-source.html  _gossip_8h-source.html  _inner_a_i_m_l_8h-source.html  (+150 more)
ext/RebeccaAIML-src-9871/doc/doxygen/: Doxyfile_api  Doxyfile_api+framework+samples  Doxyfile_api+samples  doxy_api+framework+samples.bat  doxy_api+samples.bat  doxy_api.bat
ext/RebeccaAIML-src-9871/include/: README.txt
ext/RebeccaAIML-src-9871/include/rebecca/: AimlFacade.h  GraphBuilder.h  StringPimpl.h  exports.h
ext/RebeccaAIML-src-9871/resources/schema/: README.txt
ext/RebeccaAIML-src-9871/resources/testing/: AIML.aiml  header.htm
ext/RebeccaAIML-src-9871/src/rebecca/: AimlFacade.cpp  StringPimpl.cpp
ext/RobotController/: ForceSensor.cpp  Main.cpp  Neck.cpp  Neck.h  RightArm.cpp  RightArm.h  RobotController.sln  RobotController.vcxproj  RobotController.vcxproj.filters  Servo.cpp  Servo.h
ext/SerialArduinoCommunicator/: ArduinoSerialCommunicator.filters  ArduinoSerialCommunicator.sln  ArduinoSerialCommunicator.vcxproj  Main.cpp  SerialClass.cpp
ext/pocketsphinx/src/programs/: continuous.c
ext/pocketsphinx/win32/pocketsphinx/: pocketsphinx.vcxproj
ext/pocketsphinx/win32/pocketsphinx_batch/: pocketsphinx_batch.vcxproj
ext/pocketsphinx/win32/pocketsphinx_continuous/: pocketsphinx_continuous.vcxproj
ext/pocketsphinx/win32/pocketsphinx_mdef_convert/: pocketsphinx_mdef_convert.vcxproj
ext/rebecca/: ReleaseNotes.txt  dev-todo.txt
ext/rebecca/aiml/: README.txt
ext/rebecca/aiml/annotated_alice/: Atomic.aiml  Default.aiml
ext/rebecca/build_files/autoconf/: Makefile.am  Makefile.in  configure.in
ext/rebecca/build_files/autoconf/console/: Makefile.in  configure
ext/rebecca/build_files/autoconf/consoleHtmlConverter_tag_layer/: Makefile.in  config.h.in  configure  configure.in
ext/rebecca/build_files/autoconf/consoleHtmlConverter_tag_layer/scripts/: Makefile.in
ext/rebecca/build_files/autoconf/lib/: Makefile.in  README  config.h.in
ext/rebecca/build_files/autoconf/qtgui/: Makefile.in  configure
ext/rebecca/build_files/autoconf/qtgui/scripts/: qtgui.pro.in
ext/rebecca/build_files/autoconf/regression/: bootstrap.sh  config.h
ext/rebecca/build_files/autoconf/scripts/: Makefile.am  configure  configure.in  console.in
ext/rebecca/build_files/gnumake/: README.txt  prerequistesTest.mk
ext/rebecca/build_files/vs7_build_bin_dist/: build_dist_and_source.bat  make_src.bat
ext/rebecca/build_files/vs7_dll_all/: rebecca.vcproj  rebecca.vcxproj  rebecca.vcxproj.filters
ext/rebecca/conf/: properties.xml
ext/rebecca/doc/: howtocreateanewrelease.txt  linuxINSTALL.txt
ext/rebecca/doc/doxygen/: Doxyfile_api+framework  doxy_api+framework.bat  doxy_it.bat
ext/rebecca/include/rebecca/: CallBacks.h  Exceptions.h  StringPimpl.h  all.h
ext/rebecca/resources/testing/: footer.htm
ext/rebecca/src/rebecca/: AimlFacade.cpp  GraphBuilder.cpp  StringPimpl.cpp
ext/sphinxbase/win32/sphinx_cepview/: sphinx_cepview.vcxproj
ext/sphinxbase/win32/sphinx_fe/: sphinx_fe.vcxproj
ext/sphinxbase/win32/sphinx_jsgf2fsg/: sphinx_jsgf2fsg.vcxproj
ext/sphinxbase/win32/sphinx_lm_convert/: sphinx_lm_convert.vcxproj
ext/sphinxbase/win32/sphinx_pitch/: sphinx_pitch.vcxproj
ext/sphinxbase/win32/sphinxbase/: sphinxbase.vcxproj
src/: aibot.cpp  aibot.h  continuous.cpp  continuous.h  hello.cpp  rebecca.cpp  rebecca.h  tcpClient.cpp  tcpClient.h
(+655 files in other folders)
